# django-cache-url-issuse-31

./: .flake8  README.md  pyproject.toml
core/: settings.py  settings_local.py
