[project]
name = ""
version = ""
description = "Default template for PDM package"
authors = [{ name = "RealGecko", email = "alexandrbezenkov@gmail.com" }]
dependencies = [
    "django==4.2",
    "django-redis>=5.4.0",
    "django-cache-url>=3.4.5",
    "django-extensions>=3.2.3",
    "psycopg>=3.1.18",
    "bpython>=0.24",
    "psycopg2-binary>=2.9.9",
]
requires-python = "==3.11.*"
readme = "README.md"
license = { text = "MIT" }


[tool.pdm]
distribution = false
